# openclinical-ai

./: .dockerignore  .env  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  INSTALLATION_AND_SETUP.md  LICENSE  MAINTAINERS.md  Makefile  PRICING.md  README.md  SECURITY.md  appspec.json  docker-compose.yml  pyproject.toml  requirements.txt  requirements_space.txt  run_dev.sh  space_app.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-python.yml  release.yml  stale.yml
docs/: CASE_STUDY_GARY_J_ARMSTRONG.md  CPHI-PROPOSAL.md  PROJECT-BRIEF.md  THREAT-MODEL.md
examples/: README.md  quickstart_inference.py
psw-assistant/: app.js  index.html  style.css
psw-assistant/locales/: en.json  fr.json
registry/: psw-shift-handoff.v1.0.0.manifest.json
runtime/: __init__.py  audit.py  cli.py  config.py  models.py  server.py  tenants.py
tools/: push_to_github.py  sign_manifest.py
