[project]
name = "openclinical-ai"
version = "0.1.0"
description = "Open sovereign deployment substrate for biology AI and clinical AI in Canada"
authors = [{name = "Barry Clerjuste", email = "bclerjuste@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "fhirclient>=4.1",
    "sqlmodel>=0.0.16",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*", "registry*", "audit_gateway*", "consent*", "fhir*", "psw_assistant*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.html", "*.css", "*.js"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "typer>=0.12",
]

[project.scripts]
openclinical = "runtime.cli:app"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
exclude = [
    "tests/",
    "examples/",
    ".devcontainer/",
    ".github/",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"

[tool.bandit]
exclude_dirs = ["tests", "examples", ".devcontainer", ".github"]
skips = ["B101", "B303", "B311"]